fixed overflow + text wrap + set maxwidth on text

--- a/web/static/style.css
+++ b/web/static/style.css
@@ -528,6 +528,18 @@ Ensure the default browser behavior of the `hidden` attribute.
   width: 75%;
 }
 
+.w-64 {
+  width: 16rem;
+}
+
+.w-52 {
+  width: 13rem;
+}
+
+.max-w-xs {
+  max-width: 20rem;
+}
+
 .grid-cols-2 {
   grid-template-columns: repeat(2, minmax(0, 1fr));
 }
@@ -606,6 +618,19 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .overflow-x-hidden {
   overflow-x: hidden;
+}
+
+.break-normal {
+  overflow-wrap: normal;
+  word-break: normal;
+}
+
+.break-words {
+  overflow-wrap: break-word;
+}
+
+.break-all {
+  word-break: break-all;
 }
 
 .rounded-lg {
@@ -818,6 +843,10 @@ h2 {
 }
 
 @media (min-width: 1px) {
+  .xxs\:w-48 {
+    width: 12rem;
+  }
+
   .xxs\:grid-cols-1 {
     grid-template-columns: repeat(1, minmax(0, 1fr));
   }
@@ -832,6 +861,14 @@ h2 {
 }
 
 @media (min-width: 475px) {
+  .xs\:w-3\/4 {
+    width: 75%;
+  }
+
+  .xs\:w-52 {
+    width: 13rem;
+  }
+
   .xs\:grid-cols-1 {
     grid-template-columns: repeat(1, minmax(0, 1fr));
   }
@@ -878,6 +915,14 @@ h2 {
 
   .md\:w-3\/5 {
     width: 60%;
+  }
+
+  .md\:w-32 {
+    width: 8rem;
+  }
+
+  .md\:w-36 {
+    width: 9rem;
   }
 
   .md\:grid-cols-3 {
